@startuml er

entity "buildings" {
    *building_id: integer <<PK>>
    building_name: text
    created_at: timestamptz
    updated_at: timestamptz
}

entity "locations" {
    *location_id: integer <<PK>>
    building_id: integer <<FK>>
    location_name: text
    floor: text
    created_at: timestamptz
    updated_at: timestamptz
}

entity "measure_types" {
    *measure_type_id: integer <<PK>>
    measure_type_name: text
    unit: varchar(5)
    created_at: timestamptz
    updated_at: timestamptz
}

entity "tags" {
    *tag_id: integer <<PK>>
    building_id: integer <<FK>>
    location_id: integer <<FK>>
    measure_type_id: integer <<FK>>
    tag_code: varchar(10)
    min_value: decimal(10,3)
    max_value: decimal(10,3)
    is_active: boolean
    created_at: timestamptz
    updated_at: timestamptz
}

entity "measurements" {
    *timestamp: timestamptz <<PK>>
    *tag_id: integer <<PK>>
    value: double precision
}

' リレーションシップ定義
buildings ||--o{ locations : building_id
buildings ||--o{ tags : building_id
locations ||--o{ tags : location_id
measure_types ||--o{ tags : measure_type_id
tags ||--o{ measurements : tag_id

@enduml
